Fix and workaround graphical artifacts.

BUG: 290964